# san2er

./: .gitignore  LICENSE  findings.md
pvr-neo2-shim/: .gitignore  CMakeLists.txt  README.md  build.sh
pvr-neo2-shim/build_pxr/: CMakeCache.txt  Makefile  cmake_install.cmake
pvr-neo2-shim/docs/: design.md
pvr-neo2-shim/prebuilt/: classes2.dex
pvr-neo2-shim/src/: hooks.cpp  hooks.h  loader.cpp  loader.h  log.h  pxr_api_shim.c  pxr_platform_stub.c
pvr-neo2-shim/src/java/com/psmart/vrlib/: VrActivity.java
pvr-neo2-shim/src/patcher/: CMakeLists.txt  apk_check.c  apk_check.h  elf_symbols.c  elf_symbols.h  main.c  stub_gen.c  stub_gen.h
pvr-neo2-shim/tools/: extract_pvr_functions.py  generate_forward_stubs.py  hooks.json  patch_apk.py  patch_ww1.py
